# apps/backend/openapi/openapi.json
@@ -1260,6 +1260,20 @@
               "oidc"
             ]
           },
+          "demo": {
+            "type": "object",
+            "properties": {
+              "seatMinutes": {
+                "type": "integer",
+                "minimum": -9007199254740991,
+                "maximum": 9007199254740991
+              }
+            },
+            "required": [
+              "seatMinutes"
+            ],
+            "nullable": true
+          },
           "oidc": {
             "type": "object",
             "properties": {
@@ -1279,6 +1293,7 @@
         },
         "required": [
           "mode",
+          "demo",
           "oidc"
         ]
       },
